--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   intl: ^0.18.1
   firebase_auth: ^4.7.2
   fluttertoast: ^8.2.2
+  firebase_storage: ^11.2.6
+  permission_handler: ^10.4.3
+  image_picker: ^1.0.2
 
 dev_dependencies:
   flutter_test:
