--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   image_picker: ^1.0.2
   carousel_slider: ^4.2.1
   flutter_local_notifications: ^15.1.1
+  flutter_stripe: ^9.4.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
