--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   flutter_local_notifications: ^15.1.1
   flutter_stripe: ^9.4.0
   http: ^1.1.0
+  qr_code_scanner: ^1.0.1
+  animated_text_kit: ^4.2.2
+  flutter_vibrate: ^1.3.0
+  qr_flutter: ^4.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
