--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_vibrate: ^1.3.0
   qr_flutter: ^4.1.0
   provider: ^6.0.5
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
